# UnicodeTIPA

./: README.MD
.github/workflows/: build.yml
data/: 1.nb  2.nb  Arrow.tsv  CombiningDiacriticalMarks.tsv  GeneralPunctuation.tsv  Greek.tsv  Groups.tsv  IPAExtension.tsv  LatinExtended.tsv  NOTE.MD  SpacingModifier.tsv  combinators.json  combineboth.json  combineleft.json  eltk_charmap.json  eltk_charmap.tsv  groups.json  test.wls  tipafy.wl  tipafy.wls
rust/: Cargo.toml  README.MD  mkrelease.sh
rust/data/: letters.json  marks.json
rust/src/: combine.rs  copy.rs  data.rs  group.rs  main.rs  serialize.rs  tokenize.rs  tone.rs
test/: 1.fdb_latexmk  1.fls  1.tex  1.xdv
tex/: test.fdb_latexmk  test.fls  test.tex  tmp_unicode-tipa.tex
wl/: UnicodeTIPA.wl  genRust.nb  test.wls  tipafy.wls
