[package]
name = "unicode-tipa"
authors = ["jiyu8iighx"]
version = "0.1.0"
edition = "2021"
description = "Command line tool for conversion from IPA characters encoding in Unicode to LaTeX TIPA package code."
repository = "https://github.com/Expressive-Conlang-Bulletin/UnicodeTIPA"
license = "MIT"
categories = ["encoding", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.16", features = ["derive"]}
# serde = {version = "1.0.140", features = ["derive"]}
serde_json = {version = "1.0.82", features = ["std"]}
kmp = "0.1.1"
regex = "1.6.0"