[package]
name = "unicode-tipa"
authors = ["jiyu8iighx"]
version = "0.2.0"
edition = "2021"
description = "Command line tool for conversion from IPA characters encoding in Unicode to LaTeX TIPA package code."
repository = "https://github.com/Expressive-Conlang-Bulletin/UnicodeTIPA"
license = "MIT"
categories = ["encoding", "science"]

[dependencies]
clap = {version = "3.2.16", features = ["derive"]}
serde_json = {version = "1.0.82", features = ["std"]}
kmp = "0.1.1"
regex = "1.6.0"
cli-clipboard = "0.2.1"